--- a/src/app/fornt-end/categories-section/categories-section.component.html
+++ b/src/app/fornt-end/categories-section/categories-section.component.html
@@ -39,7 +39,7 @@
 <!--   </div>-->
 
     <div class="container px-5">
-        <h2 class=" display-5 text-cheese-yellow  my-5" data-aos="fade-up">Nos marque !</h2>
+        <h2 class=" display-5 text-cheese-yellow  my-5">Nos marque !</h2>
         <div class="row gx-5 gy-3"> <!-- g-3 adds vertical + horizontal spacing -->
             <div class="col-lg-3 col-md-6 col-12" *ngFor="let category of productCategories | async">
                 <mat-card (click)="getProductsByCategory(category.ref)" appearance="outlined" class="border-0 shadow-sm">
@@ -83,7 +83,7 @@
 <div class="container-fluid mt-3"  id="top-selles">
   <div class="row ">
     <hr>
-    <h2 class=" display-5 text-cheese-yellow  my-5" data-aos="fade-up">
+    <h2 class=" display-5 text-cheese-yellow  my-5">
         <mat-icon class="fs-1 overflow-visible me-3">local_fire_department</mat-icon>Meilleures ventes</h2>
   </div>
 
