--- a/src/app/fornt-end/show-product/show-product.component.html
+++ b/src/app/fornt-end/show-product/show-product.component.html
@@ -53,7 +53,7 @@
                              src="/tacos.webp" alt="{{item.name}}">
                     </a>
                     <div class="card-body">
-                        <span class="badge bg-crust-brown mb-2">{{ item.seller?.sellerName }}</span>
+                        <span class="badge bg-crust-brown mb-2">{{ item.seller.sellerName }}</span>
                         <h6 class="fw-bold text-dark text-truncate">{{ item.name }}</h6>
                         <div class="d-flex justify-content-between align-items-center">
                             <span class="text-muted">{{ item.price }} MAD</span>
